# annot

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  COMPONENTS.md  CONTRIBUTING.md  HL_REFERENCE.md  README.md  annot-qa-test-plan-whiteboard.md  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.js
.claude/: plan.md
src-tauri/: Cargo.toml  build.rs  sample.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/grammars/: mermaid.sublime-syntax
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  diff.rs  error.rs  excalidraw_window.rs  files.rs  highlight.rs  id.rs  input.rs  lang.rs  lib.rs  main.rs  markdown.rs  mermaid_window.rs  output.rs  perf.rs  portal.rs  review.rs  state.rs  terraform.rs  window_state.rs
src-tauri/src/asciiscript/: ast.rs  lexer.rs  mod.rs  parser.rs  render.rs  tests.rs
src-tauri/src/asciiscript/snapshots/: annot_lib__asciiscript__tests__alert_error.snap  annot_lib__asciiscript__tests__alert_info.snap  annot_lib__asciiscript__tests__alert_warning.snap  annot_lib__asciiscript__tests__alert_with_code.snap  annot_lib__asciiscript__tests__alert_with_multiple_lines.snap  annot_lib__asciiscript__tests__box_titled.snap  annot_lib__asciiscript__tests__build_status_dialog.snap  annot_lib__asciiscript__tests__buttons.snap  annot_lib__asciiscript__tests__checkbox_states.snap  annot_lib__asciiscript__tests__code_block.snap  annot_lib__asciiscript__tests__code_in_box.snap  annot_lib__asciiscript__tests__complex_nested_rows.snap  annot_lib__asciiscript__tests__confirmation_dialog.snap  annot_lib__asciiscript__tests__dashboard.snap  annot_lib__asciiscript__tests__data_table_with_actions.snap  annot_lib__asciiscript__tests__database_query_tool.snap  annot_lib__asciiscript__tests__deeply_nested_boxes.snap  annot_lib__asciiscript__tests__empty_layout.snap  annot_lib__asciiscript__tests__empty_row.snap  annot_lib__asciiscript__tests__empty_section.snap  annot_lib__asciiscript__tests__empty_window.snap  annot_lib__asciiscript__tests__error_dialog_with_details.snap  annot_lib__asciiscript__tests__file_browser.snap  annot_lib__asciiscript__tests__git_commit_dialog.snap  annot_lib__asciiscript__tests__grid_dashboard_complex.snap  annot_lib__asciiscript__tests__grid_masonry_3_row.snap  annot_lib__asciiscript__tests__grid_simple_2x2.snap  annot_lib__asciiscript__tests__input_variants.snap  annot_lib__asciiscript__tests__list_basic.snap  annot_lib__asciiscript__tests__list_with_selection.snap  annot_lib__asciiscript__tests__login_form.snap  annot_lib__asciiscript__tests__long_list.snap  annot_lib__asciiscript__tests__many_buttons_in_row.snap  annot_lib__asciiscript__tests__many_checkboxes.snap  annot_lib__asciiscript__tests__many_rows.snap  (+48 more)
src-tauri/src/mcp/: mod.rs  tools.rs
src-tauri/src/output/: builder.rs  formatters.rs  mod.rs  render.rs  snapshot_tests.rs
(+263 files in other folders)
