[package]
name = "annot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "annot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
syntect = "5"

[dependencies]
arboard = "3"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
syntect = "5"
dirs = "5"
fs4 = "0.12"
rand = "0.8"
rmcp = { version = "0.12.0", features = ["server", "transport-io"] }
tokio = { version = "1.48.0", features = ["full"] }
schemars = { version = "1.1.0", features = ["derive"] }
unidiff = "0.4"
comrak = { version = "0.31", default-features = false, features = ["syntect"] }
unicode-width = "0.2"
base64 = "0.22.1"
sha2 = "0.10.9"
hex = "0.4.3"
urlencoding = "2.1.3"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.23.0"

